# Rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  rust.yml
docs/: APPLE_MUSIC_INTEGRATION.md
santa-tracker/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  test.sh
santa-tracker/k8s/: deployment.yaml
santa-tracker/src/: effects.rs  main.rs  renderer.rs  santa.rs
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs  player.rs
src/playback/: applemusic.rs  applemusic_oauth.rs  macos.rs  mod.rs  mpv.rs  noop.rs  system.rs
tests/: integration_playback.rs
