[package]
name = "apple"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apple"
path = "src/main.rs"

[[bin]]
name = "applectl"
path = "src/bin/applectl.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
which = "4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.30", features = ["signal", "process"] }

# TUI dependencies
ratatui = "0.23"
crossterm = "0.26"

# HTTP client for TLS cert validation
reqwest = { version = "0.12.25", features = ["rustls-tls", "json"] }

# JWT helper
jsonwebtoken = { version = "10.2.0", features = ["pem", "rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
chrono = "0.4"
