[package]
name = "santa-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "santa-tracker"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
chrono = "0.4"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
