[package]
name = "santa-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "santa-tracker"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
tokio = { version = "1.35", features = ["full"] }
rand = "0.9.2"
chrono = "0.4"
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
